feat:performance and code maintenance & change hero img

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <a href="#quizMain" class="btn btn-primary">Create Your First Quiz</a>
             </div>
             <div class="hero-image">
-                <img src="imgs/ChatGPT Image 11 أبريل 2025، 07_10_10 م.png" alt="Assessment Platform Demo">
+                <img src="imgs/d655ef64-173d-45ba-be0e-0ad8c439f69e.jpg" alt="Assessment Platform Demo">
             </div>
         </div>
     </section>
