--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="imgs/fav/d655ef64-173d-45ba-be0e-0ad8c439f69e.jpg" type="image/jpeg">
     <title>QuizPro | Professional Assessment Platform</title>
 
 </head>
